--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,21 +2,47 @@
 - question: Общие вопросы
   hashtag: хэш
   items:
-    - question: Вопрос
+    - question: На чем передвигаться в Тайланде?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Ответ
-    - question: Вопрос №2
+                    ▪ Общественный транспорт в Таиланде: сонгтео, тук-тук
+      Транспорт в Таиланде на первый взгляд кажется небезопасным, непривычным, и даже иногда грязным, но зато дешевый и весёлый!
+Сонгтео (переводится как «две скамьи») — это пикап с двумя рядами сидений в кузове. Интересно, что «типаж» сонгтео зависит от местности. Или от маршрута. Например, в Паттайе белые сонгтео транзитные, а тёмно синие – городские. Цена может быть зафиксирована и обозначена на табличке (10 — 40 бат) или может зависеть от расстояния.
+ 
+Тук-тук — это рикша с мотором. Туристы его очень любят, хотя тук-тук очень шумный и неудобный, особенно в сезон дождей. 
+В Бангкоке есть метро и обычные автобусы (с кондиционерами и без). Проезд на автобусе с кондиционером стоит 13 бат, на обычном автобусе — 7 бат.
+            ▪ Метро в Таиланде
+      Метро есть только в одном городе Таиланда — в Бангкоке.
+Метро в Бангкоке бывает подземное (MRT), надземное (BTS или Skytrain) и до аэропорта (ARL). К сожалению, на все три линии нужно покупать отдельные билеты, стоимость которого высока и сравнима с такси. Зато можно без пробок добраться в любой конец города с 6:00 до 00:00
+Стоимость зависит от количества станций. Если вы проедете больше, чем оплатили, турникет на выходе вас просто не пропустит. Рядом с турникетом всегда есть будка с работником метро. Подходите к ней, протягиваете билет, и вам говорят, сколько нужно доплатить.
+• Билеты BTS бывают разовые, однодневные (билет действителен не 24 часа, только в течение дня покупки), 30-ти дневный (15, 25, 40, 50 поездок, протяженность поездки не учитывается), и пополняемый.
+• Все билеты MRT действительны только 90 минут. Если в течение этого времени вы не покинули метро, вас оштрафуют на 40 бат. Чтобы не катались просто так)
+            ▪ Такси в Таиланде
+С такси в Таиланде связано много «историй», казусов, разводов. Когда из багажника пропадают ценные вещи, или таксист возит вас кругами или в обход, когда завышают цену, и в конце пути говорят что названная сумма это с каждого, а не стоимость поездки в общем. Поэтому чётко оговаривайте стоимость поездки перед посадкой. Берите ценные вещи в салон и отслеживайте свой маршрут по навигатору, предварительно вслух озвучив всем понятное слово GPS.
+Либо воспользуйтесь международными службами такси, которые есть теперь и в Таиланде. 
+    - question: Что нельзя делать в Таиланде?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Ответ
-    - question: Вопрос №3
+        Чтобы избежать неприятностей, лучше заранее знать, что нельзя делать в Королевстве. Вот список важных запретов:
+    • Нельзя курить на пляже и в общественных местах. Для курения есть специально отведенные зоны. 
+    • Нельзя оскорблять или неуважительно высказываться относительно Короля Таиланда и членов королевской семьи. За это предусмотрен срок до 50 лет лишения свободы. 
+    • Нельзя мять деньги — на них изображен Король Таиланда. 
+    • Нельзя ввозить электронные сигареты, кальяны. Нельзя курить их в Таиланде. 
+    - question: Как переехать в Таиланд на ПМЖ?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Ответ
+        Переехать в Таиланд на ПМЖ практически невозможно, но есть несколько вариантов, как жить в Таиланде долго:
+    1. Туристическая виза — придётся визаранить, т.е. ездить каждые 3 месяца за новой визой в соседнюю страну. Сейчас с этим способом проблемы, т.к. тайцы стали более требовательно относиться к выдаче виз, и, например, в Куала Лумпуре тайскую визу уже не получить. 
+    2. Учебная виза — всё, что нужно, это учиться в одной из языковых школ. Их в Таиланде много. В последнее время языковые школы стали тщательно проверять, и студентам таки приходится ходить на занятия. 
+    3. Виза волонтёра — позволяет длительно находится в Таиланде, но нужно действительно быть волонтёром. 
+    4. Бизнес-виза — открываем свой бизнес в Тае с уставным капиталом минимум 2 млн. бат. 
+    5. Work permit или разрешение на работу — можно устроится куда-то работать официально, что сложно, либо найти компанию, которая сделает для вас ворк пермит. Стоит порядка 30 тыс. бат в год. Есть разные ворк пермиты: по одним можно выезжать из страны, по другим нет. 
+    6. Пенсионная виза — только для людей 50+ , и на счету в тайском банке должно лежать 26000$. 
+    7. Программа Thai Elite — позволяет за 15000$ находится в Тае 5 лет. Есть разные тарифы, в том числе и семейный. 
+
 - question: Общие вопросы 2
   hashtag: хэш
   items:
