--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,7 +6,7 @@
       hashtag: Хэш
       ldjson: yes
       answer: |
-        ▪ Общественный транспорт в Таиланде&#58; сонгтео, тук-тук.
+        ▪ Общественный транспорт в Таиланде&#58; сонгтео, тук-тук.  
           Транспорт в Таиланде на первый взгляд кажется небезопасным, непривычным, и даже иногда грязным, но зато дешевый и весёлый!
           Сонгтео (переводится как «две скамьи») — это пикап с двумя рядами сидений в кузове.
           Интересно, что «типаж» сонгтео зависит от местности. Или от маршрута.
@@ -15,17 +15,21 @@
           Тук-тук — это рикша с мотором. Туристы его очень любят, хотя тук-тук очень шумный и неудобный, особенно в сезон дождей.
           В Бангкоке есть метро и обычные автобусы (с кондиционерами и без).
           Проезд на автобусе с кондиционером стоит 13 бат, на обычном автобусе — 7 бат.
-        ▪ Метро в Таиланде
+        
+        ▪ Метро в Таиланде  
           Метро есть только в одном городе Таиланда — в Бангкоке.
           Метро в Бангкоке бывает подземное (MRT), надземное (BTS или Skytrain) и до аэропорта (ARL).
           К сожалению, на все три линии нужно покупать отдельные билеты, стоимость которого высока и сравнима с такси.
           Зато можно без пробок добраться в любой конец города с 6&#58;00 до 00&#58;00
           Стоимость зависит от количества станций. Если вы проедете больше, чем оплатили, турникет на выходе вас просто не пропустит.
           Рядом с турникетом всегда есть будка с работником метро. Подходите к ней, протягиваете билет, и вам говорят, сколько нужно доплатить.
-        • Билеты BTS бывают разовые, однодневные (билет действителен не 24 часа, только в течение дня покупки), 30-ти дневный (15, 25, 40, 50 поездок, протяженность поездки не учитывается), и пополняемый.
-        • Все билеты MRT действительны только 90 минут.
+        
+        ▪ Билеты BTS бывают разовые, однодневные (билет действителен не 24 часа, только в течение дня покупки), 30-ти дневный (15, 25, 40, 50 поездок, протяженность поездки не учитывается), и пополняемый.
+        
+        ▪ Все билеты MRT действительны только 90 минут.  
           Если в течение этого времени вы не покинули метро, вас оштрафуют на 40 бат. Чтобы не катались просто так)
-        ▪ Такси в Таиланде
+        
+        ▪ Такси в Таиланде  
           С такси в Таиланде связано много «историй», казусов, разводов.
           Когда из багажника пропадают ценные вещи, или таксист возит вас кругами или в обход, когда завышают цену, и в конце пути говорят что названная сумма это с каждого, а не стоимость поездки в общем. Поэтому чётко оговаривайте стоимость поездки перед посадкой. Берите ценные вещи в салон и отслеживайте свой маршрут по навигатору, предварительно вслух озвучив всем понятное слово GPS.
           Либо воспользуйтесь международными службами такси, которые есть теперь и в Таиланде.
@@ -34,10 +38,14 @@
       ldjson: yes
       answer: |
         Чтобы избежать неприятностей, лучше заранее знать, что нельзя делать в Королевстве. Вот список важных запретов&#58;
+        
         • Нельзя курить на пляже и в общественных местах. Для курения есть специально отведенные зоны.
+        
         • Нельзя оскорблять или неуважительно высказываться относительно Короля Таиланда и членов королевской семьи.
           За это предусмотрен срок до 50 лет лишения свободы.
+        
         • Нельзя мять деньги — на них изображен Король Таиланда.
+        
         • Нельзя ввозить электронные сигареты, кальяны. Нельзя курить их в Таиланде.
     - question: Как переехать в Таиланд на ПМЖ?
       hashtag: Хэш
