--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,64 +1,34 @@
 ---
-- question: Общие вопросы
+- question: Отдых и Развлечения
   hashtag: хэш
   items:
-    - question: На чем передвигаться в Тайланде?
+    - question: Где на Пхукете заняться йогой?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        ▪ Общественный транспорт в Таиланде&#58; сонгтео, тук-тук.  
-          Транспорт в Таиланде на первый взгляд кажется небезопасным, непривычным, и даже иногда грязным, но зато дешевый и весёлый!
-          Сонгтео (переводится как «две скамьи») — это пикап с двумя рядами сидений в кузове.
-          Интересно, что «типаж» сонгтео зависит от местности. Или от маршрута.
-          Например, в Паттайе белые сонгтео транзитные, а тёмно синие – городские.
-          Цена может быть зафиксирована и обозначена на табличке (10 — 40 бат) или может зависеть от расстояния.
-          Тук-тук — это рикша с мотором. Туристы его очень любят, хотя тук-тук очень шумный и неудобный, особенно в сезон дождей.
-          В Бангкоке есть метро и обычные автобусы (с кондиционерами и без).
-          Проезд на автобусе с кондиционером стоит 13 бат, на обычном автобусе — 7 бат.
-        
-        ▪ Метро в Таиланде  
-          Метро есть только в одном городе Таиланда — в Бангкоке.
-          Метро в Бангкоке бывает подземное (MRT), надземное (BTS или Skytrain) и до аэропорта (ARL).
-          К сожалению, на все три линии нужно покупать отдельные билеты, стоимость которого высока и сравнима с такси.
-          Зато можно без пробок добраться в любой конец города с 6&#58;00 до 00&#58;00
-          Стоимость зависит от количества станций. Если вы проедете больше, чем оплатили, турникет на выходе вас просто не пропустит.
-          Рядом с турникетом всегда есть будка с работником метро. Подходите к ней, протягиваете билет, и вам говорят, сколько нужно доплатить.
-        
-        ▪ Билеты BTS бывают разовые, однодневные (билет действителен не 24 часа, только в течение дня покупки), 30-ти дневный (15, 25, 40, 50 поездок, протяженность поездки не учитывается), и пополняемый.
-        
-        ▪ Все билеты MRT действительны только 90 минут.  
-          Если в течение этого времени вы не покинули метро, вас оштрафуют на 40 бат. Чтобы не катались просто так)
-        
-        ▪ Такси в Таиланде  
-          С такси в Таиланде связано много «историй», казусов, разводов.
-          Когда из багажника пропадают ценные вещи, или таксист возит вас кругами или в обход, когда завышают цену, и в конце пути говорят что названная сумма это с каждого, а не стоимость поездки в общем. Поэтому чётко оговаривайте стоимость поездки перед посадкой. Берите ценные вещи в салон и отслеживайте свой маршрут по навигатору, предварительно вслух озвучив всем понятное слово GPS.
-          Либо воспользуйтесь международными службами такси, которые есть теперь и в Таиланде.
-    - question: Что нельзя делать в Таиланде?
+        ▪Практика йоги на Пхукете давно развита, кроме обычного отдыха здесь можно круглый год отдыхать и заниматься практикой. В основном здесь преподают Бикрам-йогу, на западный манер ее называют горячая йога или hot yoga, некоторые ее еще называют йогой и баней, а для кого-то это ад. Бикрам не обещает Просветления, но обязательно понравится тем, кто хочет улучшить фигуру, укрепить здоровье и очистить организм от токсинов. Бикрам йога не рекоммендуема людям с повышенным давлением, больным сердцем и сосудами. Горячей йогой необходимо заниматься в специально прогретом помещении, при этом занятия проводятся при температуре примерно сорок градусов, здесь все обильно потеют. Получасовой стандартный комплекс состоит из 26 классических асан из Хатха-йоги, а так же двух дыхательных упражнений совсем несложных. И поверьте Вам этого будет предостаточно. На Пхукете йога-центры ориентированы на туристов из Европы, поэтому здесь преподают на английском, но понимают на занятиях даже те, кто не владеет языком. Для тех, кто в России уже ощутил на себе хот-йогу скорее всего получит удовольствие от нее же только на Пхукете. Более того если йога центр расположен недалеко от того места, где Вы остановились.
+Kata Hot Yoga - Ката Хот Йога. Это лидер на Пхукете, расположение очень удобно, студия расположена вблизи пляжа Ката бич. Здесь все на высоте от уровней преподавания до цен на услуги. Проводится по четыре занятия в день, первое из которых начинается в девять утра. Преподаватели имеют специальные сертификаты, они опытны и приветливы. Выгодно приобретать абонимент на месяц.
+Bikram Yoga Phuket - Бикрам-йога Пхукет. Это еще один центр в котором практикуют хот йогу. Центр позиционирует себя как «единственный правильный Бикрам-йога центр» расположенный на острове. Система оплаты здесь более гибка. Студия такая же комфортная и светлая, как и у «Ката Хот Йога». Все преподаватели имеют сертификаты «Бикрам» и очень серьезно относятся к делу. Центр йоги располагается вблизи пляжа Патонг одного из многолюдных пляжей Пхукета.
+Hot Yoga Evolution - Томаш Хот Йога Эволюшен
+Очень приличная студия. Преподают здесь по стилю Джима Баркана, когда то он был лучшим студентом, а ныне конкурент Бикрама Чоудхури. Здесь всегда рады новичкам и для практикующих всегда найдутся сюрпризы. Большим плюсом являются продвинутые классы для уже опытных йогов и интенсив-курс для преподавателей уже имеющих сертификат преподавателей хот-йоги. На продвинутых классах практикуется еще более сложные позиции в рамках хот йоги, а также виньясы и ряд дополнительных пранаям. Неплохая альтернатива перечисленным выше студиям.
+Новички чаще всего чувствуют себя хот догом, а не хот йогом на первом занятии, и может такой стиль Вам не подойдет, тогда отдайте предпочтение классической йоге. На Пхукете имеется несколько неплохих студий.
+Abbysan Yoga - Аббисан Йога. Это традиционная йога, а так же авторские стили. Практика проходит в красивом зале. Здесь преподаются знакомые всем методы: классическая Хатха-йога, Приветствие Солнцу (самостоятельная практика), Шивананда-йога, Тратак (медитация), а еще и любопытные авторские: Воин йоги, Приветствие планетам, Сердце йоги и другие. Упор здесь делают на йога-терапию. Так же практикуют частные занятия, в группах по два-четыре человека. Расположена недалеко от пляжей Найхарн и Равай, в городе Чалонг.
+Ganesha Yoga Shala - Ганеша Йога-шала.
+Аштанга-йогу проводят в небольшом зале рассчитанном на десять-пятнадцать человек, расположенном возле пляжа Равай в тихой боковой улочке. По ощущениям занятия почти как индивидуальные, ведь группы совсем небольшие. У них имеется собственный магазин необходимых для йоги товаров, для Пхукета выбор ковриков и чехлов велик. Цены демократичные, прием теплый гарантирован. Изюминкой центра является возможность проживания при нем, но спрос настолько велик, что нужно резервировать заранее. Обстановка йоговская что называется.
+На Пхукете можно еще позаниматься хатха-йогой, ее преподают в более крупных центрах: Club Asia Fitness и Royal Phuket Marine. Очень комфортный вариант если Вы йогу совмещаете с посещением бассейна, фитнесса и так далее. Цены высокие.
+«Sukko Spa» - мягкая йога, здесь можно и пройти несколько спа процедур наивысшего класса.
+Meditation Thailand - практика йоги в медитационном ретрите. Здесб работают по схеме все включено, и можно попробовать как йогу, так и Цигун и Гонг-медитацию.
+Советы по хот йоге. На горячую йогу не стоит идти раньше восьми утра, ведь зде ее рано не преподают. Делать ее нужно только натощак. Воду пить нужно до и после занятия, а так же вовремя только теплую. Не пейте так же сок, организм воспринимает как еду. Несмотря на то, что почти все йога-центры находятся возле возле пляжа купаться после йоги не рекомендуется. Подождите минимум тридцать минут. На йогу одевайтесь как можно легче.
+    - question: Можно ли прыгнуть с парашютом на Пхукете?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Чтобы избежать неприятностей, лучше заранее знать, что нельзя делать в Королевстве. Вот список важных запретов&#58;
-        
-        • Нельзя курить на пляже и в общественных местах. Для курения есть специально отведенные зоны.
-        
-        • Нельзя оскорблять или неуважительно высказываться относительно Короля Таиланда и членов королевской семьи.
-          За это предусмотрен срок до 50 лет лишения свободы.
-        
-        • Нельзя мять деньги — на них изображен Король Таиланда.
-        
-        • Нельзя ввозить электронные сигареты, кальяны. Нельзя курить их в Таиланде.
-    - question: Как переехать в Таиланд на ПМЖ?
+        Надо понимать что такой вид спорта для неподготовленных людей слишком сложный, поэтому лучше всего совершать прыжок с парашютом в тандеме с инструктором. Мало того, в подтверждение прыжка еще и выдадут соответствующий документ, и можно будет дома его показать друзьям. И если есть давняя мечта прыгнуть с парашютом, на Пхукете её можно осуществить.
+    - question: Где можно поплавать с дельфинами в Пхукете?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Переехать в Таиланд на ПМЖ практически невозможно, но есть несколько вариантов, как жить в Таиланде долго&#58;
-        1. Туристическая виза — придётся визаранить, т.е. ездить каждые 3 месяца за новой визой в соседнюю страну. Сейчас с этим способом проблемы, т.к. тайцы стали более требовательно относиться к выдаче виз, и, например, в Куала Лумпуре тайскую визу уже не получить.
-        2. Учебная виза — всё, что нужно, это учиться в одной из языковых школ. Их в Таиланде много. В последнее время языковые школы стали тщательно проверять, и студентам таки приходится ходить на занятия.
-        3. Виза волонтёра — позволяет длительно находится в Таиланде, но нужно действительно быть волонтёром.
-        4. Бизнес-виза — открываем свой бизнес в Тае с уставным капиталом минимум 2 млн. бат.
-        5. Work permit или разрешение на работу — можно устроится куда-то работать официально, что сложно, либо найти компанию, которая сделает для вас ворк пермит. Стоит порядка 30 тыс. бат в год. Есть разные ворк пермиты&#58; по одним можно выезжать из страны, по другим нет.
-        6. Пенсионная виза — только для людей 50+ , и на счету в тайском банке должно лежать 26000$.
-        7. Программа Thai Elite — позволяет за 15000$ находится в Тае 5 лет. Есть разные тарифы, в том числе и семейный.
+        Не хочется Вас расстраивать, а особенно ребёнка, но на Пхукете нет дельфинария, только мини-океанариум. Мы советуем Вам сводить ребёнка на экскурсию, ведь там находится огромное количество разновидностей рыб. Время работы с 8.30 до 16.30; вход для одного взрослого обойдётся в 100 бат, ну а для ребёнка меньше - 50 бат. А если пойдёте на выходных, увидите как акул кормят. Ну а дельфинарий, где купаются с дельфинами, на сколько я знаю, есть в Чантабури, но это далеко от Пхукета. А вдруг Вы захотите, то дельфинарий работает до 18.00, а для купания с дельфинами отводят около 45 минут.
 - question: Общие вопросы 2
   hashtag: хэш
   items:
