--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -29,6 +29,17 @@ Meditation Thailand - практика йоги в медитационном р
       ldjson: yes
       answer: |
         Не хочется Вас расстраивать, а особенно ребёнка, но на Пхукете нет дельфинария, только мини-океанариум. Мы советуем Вам сводить ребёнка на экскурсию, ведь там находится огромное количество разновидностей рыб. Время работы с 8.30 до 16.30; вход для одного взрослого обойдётся в 100 бат, ну а для ребёнка меньше - 50 бат. А если пойдёте на выходных, увидите как акул кормят. Ну а дельфинарий, где купаются с дельфинами, на сколько я знаю, есть в Чантабури, но это далеко от Пхукета. А вдруг Вы захотите, то дельфинарий работает до 18.00, а для купания с дельфинами отводят около 45 минут.
+- question: Посоветуйте аквапарк на Пхукете?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
+      Аквапарки прекрасное место времяпровождения для всей семьи. Конечно, хорошо когда есть несколько аквапарков, и можно выбирать, какой посетить, но на Пхукете только один аквапарк «Splash Jungle», что переводится как «Джунгли-Брызги».
+Расположен аквапарк в северной части острова в районе пляжа Май Као совсем недалеко от гостиничного комплекса «Centara Grand West Sands». Построили аквапарк в 2010 году и с тех тор это любимое место отдыха отдыхающих. Вначале аквапарк могли посещать только постояльцы гостиничного комплекса «Centara Grand West Sands», но теперь этот аквапарк посещают все желающие. В этом аквапарке будет интересно и Вам и Вашему сыну.
+Аквапарк имеет семь тематических зон, большое количество разнообразных горок, несколько бассейнов, искусственную реку на 335 метров, бассейн с искусственными волнами, горячие источники, массажный салон и сауну.
+Территория аквапарка хорошо спланирована, есть места для отдыха, кафе, бар, шезлонги и грибочки, где можно посидеть в тенечке. Для дошкольников есть детские аттракционы, мелкие места для купания, фонтанчики и детские площадки.
+Для взрослых экстрималов интересно будет посетить горку Boomerango, которая работает по принципу бумеранга и горку Superbowl, когда отдыхающие буквально проваливаются в бассейн.
+Добраться до аквапарка можно на трансфере, который обойдется дешевле, чем такси или на арендованной машине по трассе 402. Ориентируйтесь на аэропорт Пхукета, аквапарк находится от него недалеко. Работает аквапарк ежедневно с 10:00 до 18:00, билеты стоят дороговато, но если учесть, что Пхукет самое дорогое место отдыха в Таиланде, то цены вполне приемлемые.
+
 - question: Общие вопросы 2
   hashtag: хэш
   items:
