--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -39,22 +39,43 @@ Meditation Thailand - практика йоги в медитационном р
 Территория аквапарка хорошо спланирована, есть места для отдыха, кафе, бар, шезлонги и грибочки, где можно посидеть в тенечке. Для дошкольников есть детские аттракционы, мелкие места для купания, фонтанчики и детские площадки.
 Для взрослых экстрималов интересно будет посетить горку Boomerango, которая работает по принципу бумеранга и горку Superbowl, когда отдыхающие буквально проваливаются в бассейн.
 Добраться до аквапарка можно на трансфере, который обойдется дешевле, чем такси или на арендованной машине по трассе 402. Ориентируйтесь на аэропорт Пхукета, аквапарк находится от него недалеко. Работает аквапарк ежедневно с 10:00 до 18:00, билеты стоят дороговато, но если учесть, что Пхукет самое дорогое место отдыха в Таиланде, то цены вполне приемлемые.
-
-- question: Общие вопросы 2
+- question: Еда, питание
   hashtag: хэш
   items:
-    - question: Вопрос 1
+    - question: Где можно дешево поесть на Пхукете?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Ответ
-    - question: Вопрос №2
+        Если вы отдыхаете на пляже Карон, то в кафе на этом пляже питаться дороже, чем, например, на Патонге. На Кароне обед на одного человека обойдется от 200-250 бат, на Патонге можно найти кафе и подешевле, от 150 бат на человека за обед. Самая дешевая еда - в местных кафе, где порция риса или лапши с наполнителями (свинина, курица, морепродукты) стоит 50 бат. Так же дешево можно поесть на фудкортах в крупных торговых центрах, где на 100 бат можно хорошо покушать. А так же, как уже отметили, на местных рынках очень вкусная рыба, суши, жаренные куриные ноги. Объяснятся можно на ломанном английском или "на пальцах".
+    - question: Сколько стоит покушать на Пхукете?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Ответ
-    - question: Вопрос №3
+        В зависимости от ваших вкусовых предпочтений и места, где будет расположен ваш отель. Самое бюджетное место, где можно покушать - Патонг. Здесь можно уложиться на человека в 300 рублей. Бухта Банг Тао самая дорогая. В среднем стоимость нормального ужина или обеда будет в районе 1000 рублей, без алкоголя за двоих.
+    - question: Где поесть в районе пляжа Камала Бич?
       hashtag: Хэш
       ldjson: yes
       answer: |
-        Ответ
+        Голодными в Калама Бич не останетесь, там вдоль всей береговой линии есть довольно много ресторанов и кафе, где Вы сможете питаться. Цены в кафе средние для Пхукета и Вы вполне сможете пообедать вдвоем за 150-200 бат. Так же местные жители продают на пляже сладкую кукурузу, приготовленную при Вас на мангале. Еще в центральной части побережья есть макашницы и лотки с блинчиками роти, пад таем и другими тайскими блюдами.
+Бюджетнее всего можно перекусить в маленьких тайских ресторанчиках, расположенных на верхушке холма, по дороге из Патонга. Это простенькие ресторанчики с традиционной тайской едой, но с очень красивыми видами на побережье.
+На берегу пляжа можно посоветовать хороший ресторан Mamma Mia с европейской и тайской кухней и с шикарным видом на море. Так же в этом ресторане есть детское меню.
+На главной трассе можно порекомендовать ресторан Ohlala. Здесь готовят тайскую классическую еду, блюда севера Таиланда, в том числе и суп као сой, салат из папайи, и европейскую еду.
+Из более дорогих заведений можно посоветовать ресторан Plum в отеле Cape Sienna. Здесь в меню средиземноморская, европейская и тайская кухня из морепродуктов.
+ - question: Где на Пхукете попробовать тайские деликатесы?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
+      Кроме змеиной фермы и соответственно змеиного мяса на Пхукете можно попробовать и другие подобные деликатесы. Прямо на улице есть несколько лотков, на которых продаются несколько видов жареных насекомых. Причем, по признанию тайцев они это не едят, а все готовят для туристов. Особенно русские любят экспериментировать с желудком.
+      - question: Проживание
+  hashtag: хэш
+  items:
+    - question: Где на Пхукете жить дешевле всего?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
+      Если бюджет вашей поездки ограничен, то самым доступным по стоимости вариантом жилья на Пхукете будет гестхаус. Проще говоря, это гостевой дом, который является отличной альтернативой отелям, апартаментам и прочему арендованному жилью. Мнение о том, что это жилье подходит исключительно на короткий срок не соответствует действительности, многие туристы останавливаются в гестхаусах на месяц и более. Когда на первом месте стоит экономия, то многие готовы пожертвовать многими благами отдыха. Гестхаусы в отличие от отелей не делятся на категории и не имеют звездности. Чаще всего такое жилье представляет собой комнату с санузлом и минимальным набором услуг. Кухня обычно общая, есть гостиная с телевизором. Только в единичных гестхаусах есть бассейны, чаще всего бассейна нет. Принцип аренды такого жилья, такой же как и принцип аренды отелей: это можно сделать он-лайн, через интернет или же забронировать жилье на месте, на стойке рецепшена. Второй вариант лучше, но в высокий сезон могут быть проблемы с наличием свободных мест. Многие туристы отмечают, что ряд трехзвездочных отелей на Пхукете ничем не лучше гестхаусов, а по стоимости в несколько раз дороже.
+Стоимость аренды зависит от ее срока, причем зависит существенно. Если за суточное проживания в гестхаусе нужно заплатить порядка 15 долларов в сутки, то за месяц эта сумма будет составлять примерно 150-180 долларов. Наибольшее влияние на стоимость оказывает расположение гестхауса, но такая же ситуация и с отелями. На Патонге стоимость аренды будет в 1,5 раза выше, чем в столице острова городе Пхукет. Кроме этого стоимость зависит от ряда дополнительных услуг (завтрак, уборка, доступ к интернету и т.д.). Также существенное влияние на стоимость оказывает размер комнаты, чем меньше комната, тем цена ниже. Маленькую комнату предпочитают молодые пару, которые приезжают отдыхать и развлекаться, а гестхаус им нужен только для ночлега и принятия душа (в таком случае размер комнаты не имеет значения). Можно найти гестхаус на определенном расстоянии от пляжа и при этом взять в аренду мопед. Экономия должна быть объективной, не нужно искать самый дешевый гестхаус, а потом думать, как оттуда съехать, чаще всего, чем ниже цена, тем хуже условия.
+При аренде гестхауса на месяц нужно обговорить все моменты такой аренды: частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться.
+Гестхаусы предлагают широкий выбор услуг, начиная от организации экскурсии и заканчивая предложения по стирки и глажке, но не всегда эти услуги отличаются высоким качеством (особенно это касается стирки). В некоторых гестхаусах в стоимость включен бесплатный интернет, но, как правило, связь такого интернета очень слабая (посмотреть почту хватит, а загрузит видео – вряд ли). Проще всего купить симку у местного оператора и пользоваться мобильным интернетом.
+Кроме депозита в денежной форме, вас попросят оставить ксерокопию паспорта. Ничего страшного в этом нет, а вот если попросят оставить оригинал паспорта, то это повод задуматься над тем стоит останавливаться в этом гестхаусе или лучше подыскать другой вариант (я бы вам советовал паспорт и другие документы никому и ни при каких обстоятельства не оставлять).
+
