--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -61,12 +61,12 @@ Meditation Thailand - практика йоги в медитационном р
 На берегу пляжа можно посоветовать хороший ресторан Mamma Mia с европейской и тайской кухней и с шикарным видом на море. Так же в этом ресторане есть детское меню.
 На главной трассе можно порекомендовать ресторан Ohlala. Здесь готовят тайскую классическую еду, блюда севера Таиланда, в том числе и суп као сой, салат из папайи, и европейскую еду.
 Из более дорогих заведений можно посоветовать ресторан Plum в отеле Cape Sienna. Здесь в меню средиземноморская, европейская и тайская кухня из морепродуктов.
- - question: Где на Пхукете попробовать тайские деликатесы?
+    - question: Где на Пхукете попробовать тайские деликатесы?
       hashtag: Хэш
       ldjson: yes
       answer: |
       Кроме змеиной фермы и соответственно змеиного мяса на Пхукете можно попробовать и другие подобные деликатесы. Прямо на улице есть несколько лотков, на которых продаются несколько видов жареных насекомых. Причем, по признанию тайцев они это не едят, а все готовят для туристов. Особенно русские любят экспериментировать с желудком.
-      - question: Проживание
+- question: Проживание
   hashtag: хэш
   items:
     - question: Где на Пхукете жить дешевле всего?
@@ -78,4 +78,12 @@ Meditation Thailand - практика йоги в медитационном р
 При аренде гестхауса на месяц нужно обговорить все моменты такой аренды: частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться.
 Гестхаусы предлагают широкий выбор услуг, начиная от организации экскурсии и заканчивая предложения по стирки и глажке, но не всегда эти услуги отличаются высоким качеством (особенно это касается стирки). В некоторых гестхаусах в стоимость включен бесплатный интернет, но, как правило, связь такого интернета очень слабая (посмотреть почту хватит, а загрузит видео – вряд ли). Проще всего купить симку у местного оператора и пользоваться мобильным интернетом.
 Кроме депозита в денежной форме, вас попросят оставить ксерокопию паспорта. Ничего страшного в этом нет, а вот если попросят оставить оригинал паспорта, то это повод задуматься над тем стоит останавливаться в этом гестхаусе или лучше подыскать другой вариант (я бы вам советовал паспорт и другие документы никому и ни при каких обстоятельства не оставлять).
-
+    - question: Могут ли заселить в отель в один номер совершеннолетнего парня и несовершеннолетнюю девушку?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
+      Если документально будет подтверждено Ваше родство, то вопросов не возникнет, но есть ряд отелей, класса люкс, которые настолько дорожат своей репутацией, что могут отказать в заселение, но это будет сделано заранее или же будет предоставлено место в другом отеле, просто на улицу никого не выгонят.
+    - question: Какие особенности аренды жилья на Пхукете?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
