--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -83,7 +83,25 @@ Meditation Thailand - практика йоги в медитационном р
       ldjson: yes
       answer: |
       Если документально будет подтверждено Ваше родство, то вопросов не возникнет, но есть ряд отелей, класса люкс, которые настолько дорожат своей репутацией, что могут отказать в заселение, но это будет сделано заранее или же будет предоставлено место в другом отеле, просто на улицу никого не выгонят.
-    - question: Какие особенности аренды жилья на Пхукете?
+    - question: Какой отель выбрать на Пхукете?
       hashtag: Хэш
       ldjson: yes
       answer: |
+      В двух шагах от пляжа Карон расположен отель Phuket Island View 3*. Только дорогу надо перейти, а так совсем близко к пляжу, примерно метров 50-70. Из "трешек" это один из лучших отелей на Пхукете. Мы платили за двоих в сентябре прошлого года 72 тысячи рублей. Отдыхали неделю, не думаю, что нынче дороже. К отелю вообще никаких претензий не было у нас. Все супер! Питание, уборка, бассейн очень чистый. Анимации не было, что нас очень обрадовало. Из Украины и России совсем мало было отдыхающих. Не знаю, может мы так попали, в такой период времени, но родную речь практически не слышали. Еще очень хорошая "трешка" - Kata Country House 3*, этот отель уже в районе другого пляжа - Ката. Там жили наши друзья, мы ездили к ним в гости. Понравилось, что территория прямо-таки утопает в зелени. Хороший отель по очень лояльной цене. Друзья платили за двоих на две недели около 100 тысяч. Разумеется, цены я привела вместе с перелетом туда-обратно.
+- question: Валюта
+  hashtag: хэш
+  items:
+    - question: Где на Пхукете можно поменять рубли?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
+      Для начала, конечно, было бы не плохо, если есть возможность, узнать курс бата к рублю и к доллару, который установлен сейчас на о.Пхукет. И потом уже рассчитать выгоду и выбрать валюту. По логике очень не выгодно рубли менять на доллары, а потом доллары на баты. Двойной обмен, а значит и потери двойные.
+Я как-то поехала с долларами и пролетела... Курс рубля к бату был почти 1:1. Получилось с рублями было выгоднее. Теперь в Тай только с рублями сама езжу и друзьям рекомендую.
+По поводу обменных пунктов нет никаких проблем, почти во всех принимают рубли, главное крупными купюрами.
+    - question: Как работают обменники в аэропорту Пхукета?
+      hashtag: Хэш
+      ldjson: yes
+      answer: |
+      Обменять валюту ночью в аэропорту Пхукета Вы действительно сможете у девушек при выходе из аэропорта. Конечно, курс у них будет очень занижен, но меняйте небольшую сумму денег, чтобы добраться только до отеля. А утром Вы сможете уже обменять валюту в многочисленных пунктах обмена. В аэропорту менять деньги не стоит даже днем, курс там всегда занижен не менее чем на 1,5%.
+В Таиланд лучше всего брать доллары и менять их нужно в банковских обменных пунктах, которые работают с 8:00 утра до 22:00 вечера. В Таиланде существуют банковские обменные пункты и частные лавки по обмену валюты, в которые ходить не стоит, они не предложат Вам выгодный курс обмена валюты. Так же не меняйте деньги в гостинице, там тоже курс обмена занижен.
+Все расчеты в Таиланде производятся в тайских батах, но если валюту Вы нигде не поменяете, таксисты будут рады доставить Вас в отель и примут к оплате доллары. Конечно, цену заломят, но в Таиланде принято торговаться, и стоимость поездки будет зависеть от Вашего умения торговаться.
